k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-2
  labels:
    app: demo-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-2
  template:
    metadata:
      labels:
        app: demo-2
    spec:
      containers:
        - name: demo-2
          image: shikhara1022/demo-2:latest
          ports:
            - containerPort: 8080
