k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-2-service
spec:
  selector:
    app: demo-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
